# TAA

./: CMakeLists.txt  vcpkg-configuration.json
source/: application.cpp  application.hpp  camera.cpp  camera.hpp  scene.cpp  scene.hpp  types.hpp  utils.hpp  window.hpp
source/renderer/: renderer.cpp  renderer.hpp  renderer_context.hpp
source/renderer/shaders/: debug_lights.glsl  scene.glsl  taa.glsl  tonemap.glsl
source/renderer/shared/: draw_scene_shared.inl  shared.inl
source/renderer/tasks/: blit_swapchain_to_resolve.hpp  draw_debug_ligts.hpp  draw_imgui_task.hpp  draw_scene_task.hpp  fill_buffers_task.hpp  init_accumulation_image.hpp  init_resolve_image.hpp  taa_task.hpp  tonemap_task.hpp
